--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -1,6 +1,7 @@
 /* Table of contents
 /* ------------------------------------------------------------
 
+
 This is a development CSS file which is built to a minified
 production stylesheet in assets/built/screen.css
 
@@ -936,7 +937,8 @@ Search                         LOGO                    Login Subscribe
 }
 
 .gh-card-title {
-    font-size: calc(1.9rem * var(--factor, 1));
+    font-size: calc(2.5rem * var(--factor, 1));
+    font-variant: small-caps;
     font-weight: 725;
     letter-spacing: -0.014em;
     line-height: 1.3;
@@ -1981,6 +1983,7 @@ Search                         LOGO                    Login Subscribe
 
 .gh-article-title {
     font-size: calc(clamp(3.4rem, 1.36vw + 2.85rem, 4.6rem) * var(--factor, 1));
+    font-variant: small-caps;
     line-height: 1.1;
     letter-spacing: -0.022em;
 }
