--- a/partials/components/navigation.hbs
+++ b/partials/components/navigation.hbs
@@ -33,18 +33,7 @@
             {{else}}
                 {{> "search-toggle"}}
                 <div class="gh-navigation-members">
-                    {{#unless @member}}
-                        {{#unless @site.members_invite_only}}
-                            <a href="#/portal/signin" data-portal="signin">Sign in</a>
-                            {{#unless hideSubscribeButton}}
-                                <a class="gh-button" href="#/portal/signup" data-portal="signup">Subscribe</a>
-                            {{/unless}}
-                        {{else}}
-                            <a class="gh-button" href="#/portal/signin" data-portal="signin">Sign in</a>
-                        {{/unless}}
-                    {{else}}
-                        <a class="gh-button" href="#/portal/account" data-portal="account">Account</a>
-                    {{/unless}}
+                    <!-- this is where the sign-in / subscribe stuff used to be -->
                 </div>
             {{/unless}}
         </div>
